# finlens

./: .gitignore  .railwayignore  MINERU_SERVER_CONFIG.md  README.md  VAST_AI_SERVER_SETUP.md  docker-compose.performance.yml  package.json  pnpm-lock.yaml  railway.json  requirements.txt
backend/: __init__.py
docs/: README.md  api.md  architecture.md  deployment.md  examples.md
frontend/: .prettierignore  .prettierrc  logrocket.json  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  vercel.json
gpu-processor/: __init__.py  config.py  indexer.py  main.py  mineru.py  models.py  requirements.txt  worker.py
scripts/: add-mongodb-dev-access.ps1  check-and-seed-mongodb.ts  clear-mongodb-data.ts  delete-all-conversations.ts  load-test.ts  seed-mongodb.ts  setup-infra.ps1  start-cloudflare-quick-tunnel.ps1  start-cloudflare-quick-tunnel.sh  start-cloudflare-tunnel.ps1  start-cloudflare-tunnel.sh  test-aws-services.ps1  test-webhook.ps1  test-webhook.sh
services/voice-agent/: pyproject.toml  requirements.txt  run.py  stop_agents.py  test_agent_dispatch.py  test_voice_response.py
services/voice-agent/src/: __init__.py  agent.py  config.py  main.py  supabase_client.py
shared/: package.json
supabase/: config.toml
terraform/: backend.hcl.example  bastion.tf  databases.tf  ecs.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
vast-ai-server/: README.md  requirements.txt  storage.py  task_queue.py
widget/: index.html  package.json  test-agent.ps1  test-api.ps1  test.html  verify-agent.ps1  (+1 more)
(+353 files in other folders)
